--- a/package.xml
+++ b/package.xml
@@ -2,9 +2,9 @@
 <package format="2">
   <name>util_eigen_geometry</name>
   <version>0.0.0</version>
-  <description>ToDo: Edit package description</description>
+  <description>Util geometry using Eigen</description>
 
-  <license>contact-the-maintainer</license>
+  <license>BSD</license>
   <maintainer email="maximilian.naumann@kit.edu">Maximilian Naumann</maintainer>
   <author email="maximilian.naumann@kit.edu">Maximilian Naumann</author>
   <url type="repository">https://gitlab.mrt.uni-karlsruhe.de/mrt_sim/util_eigen_geometry</url>
@@ -12,25 +12,9 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>mrt_cmake_modules</build_depend>
   <test_depend>gtest</test_depend>
-  <!--
-    Documentation for dependencies:
-    <build_depend>            Build-time dependency required to build
-                              this package, e.g. boost, opencv.
-    <build_export_depend>     Exported build-time dependency required to
-                              build packages that depend on this package,
-                              e.g. boost, opencv.
-    <exec_depend>             Execution dependency required to run this
-                              package, e.g. boost, opencv.
-    <depend>                  Build-time, exported build-time and execution
-                              dependency. This is a bundled synonym for
-                              <build_depend>, <build_export_depend> and
-                              <exec_depend>.
-  -->
-  <!--
-    Example:
-    <depend>mrt_opencv</depend>
-  -->
 
+  <depend>eigen</depend>
+  
   <export>
     <!-- Other tools can request additional information be placed here -->
   </export>
