test focal build

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,18 +15,23 @@ notifications:
 matrix:
   include:
     - env:
-      - UBUNTU_VERSION=xenial
-      - ROS_DISTRO=kinetic
+        - UBUNTU_VERSION=bionic
+        - ROS_DISTRO=melodic
     - env:
-      - UBUNTU_VERSION=bionic
-      - ROS_DISTRO=melodic
+        - UBUNTU_VERSION=focal
+        - ROS_DISTRO=noetic
+
+branches:
+  only:
+    - release
+    - test_focal
 
 env:
   global:
     - DEPENDENCIES_ROSINSTALL=dependencies.rosinstall
 
 before_script:
-  - git clone -q https://github.com/coincar-sim/mrt_cmake_modules_ci.git .mrt_cmake_modules_ci
+  - git clone -b add_focal_support -q https://github.com/coincar-sim/mrt_cmake_modules_ci.git .mrt_cmake_modules_ci
 
 script:
   - .mrt_cmake_modules_ci/travis.sh
